# kzios

./: .gdb_history  .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  Makefile  README.md  data.dts  halycon.code-workspace  justfile  kzios.code-workspace  log.txt  source.de
.cargo/: config
boards/: Cargo.toml
boards/k210/: device.dts  linker.ld
boards/k210/src/: main.rs
boards/qemu/: Cargo.toml  linker.ld
boards/qemu/src/: assembly.asm  main.rs
boot/: Cargo.toml  Makefile
boot/src/: console.rs  entry.asm  lang_items.rs  linker.ld  main.rs  sbi.rs
init0/: Cargo.toml
init0/src/: main.rs
kernel/: .gdb_history  Cargo.toml  Makefile  build.rs  log.txt
kernel/.cargo/: config
kernel/bootloader/: rustsbi-qemu  rustsbi-qemu.bin:Zone.Identifier
kernel/src/: assembly.asm  batch.rs  boot.S  config.rs  console.rs  driver.rs  entry.asm  external.rs  lang_items.rs  lib.rs  link_app.S  linker-k210.ld  linker-qemu.ld  main.rs  mm.rs  pmp.rs  primitive.rs  process.rs  sbi.rs  sync.rs  syscall.rs  system_call.rs  timer.rs  trap.S  trap.rs  typedef.rs  utils.rs
kernel/src/config/: memory.rs
kernel/src/device_tree/: mod.rs  model.rs
kernel/src/linkers/: linker_qemu.ld
kernel/src/memory/: address.rs  consts.rs  map.rs
kernel/src/mm/: heap_allocator.rs  mod.rs  paged.rs
kernel/src/mm/heaped/: heap_allocator.rs  mod.rs
kernel/src/mm/paged/: address.rs  frame_allocator.rs  manager.rs  mod.rs  page_table.rs  table.rs  unit.rs
kernel/src/primitive/: mmio.rs  mod.rs  uart.rs
kernel/src/primitive/qemu/: mod.rs  ns16550a.rs
kernel/src/process/: error.rs  ipc.rs  manager.rs  mod.rs  proc_control.rs  scheduler.rs
kernel/src/process/ipc/: error.rs
kernel/src/process/scheduler/: flat_scheduler.rs
kernel/src/sync/: safe_cell.rs
kernel/src/trap/: mod.rs  trap.S
kinlib/: Cargo.toml  linker.ld
kinlib/src/: lang_items.rs  lib.rs  raw_call.rs  rt.asm  rt.rs  syscall.rs
notes/: a.md  boot.md  call.md  device.md  ecs.md  fal.md  framework.md  fs.md  ipc.md  memory.md  message.md  proc.md  process.md  schedule.md  service.md  signal.md  task.md  tunnel.md
os/: Cargo.toml
os/.cargo/: config.toml
os/boards/: linker.ld
os/boards/k210/: Cargo.toml  k210.repl  k210.resc  memory.ld
os/boards/k210/src/: main.rs
os/boards/mq_r/: Cargo.toml  memory.ld  mq_r.repl
os/boards/mq_r/src/: main.rs
os/boards/qemu/: Cargo.toml  device.dts  linker.ld  memory.ld
os/boards/qemu/src/: main.rs
os/kernel/: Cargo.toml  banner.txt  linker.ld  logo.txt
os/kernel/src/: assembly.asm  board.rs  console.rs  driver.rs  env.rs  external.rs  fal.rs  fs.rs  hart.rs  krn_call.rs  lang_items.rs  lib.rs  main.rs  mm.rs  peripheral.rs  pmp.rs  prelude.rs  proc.rs  process.rs  rng.rs  rt.rs  sbi.rs  service.rs  sync.rs  syscall.rs  task.rs  timer.rs  trap.rs  typedef.rs
os/kernel/src/board/: device.rs  see.rs
os/kernel/src/board/device/: bus.rs  cpu.rs  generic.rs  intrc.rs  peripheral.rs
os/kernel/src/driver/sifive/: spi.rs
os/kernel/src/fs/: local.rs  procfs.rs  rootfs.rs
os/kernel/src/hart/: app.rs  timer.rs
os/kernel/src/mm/: frame.rs  heap.rs  layout.rs  page.rs  range.rs  unit.rs  usage.rs
os/kernel/src/mm/heaped/: heap_allocator.rs
os/kernel/src/mm/paged/: address.rs  frame_allocator.rs  page_table.rs  unit.rs
os/kernel/src/peripheral/: aclint.rs
os/kernel/src/primitive/: qemu.rs
os/kernel/src/primitive/qemu/: ns16550a.rs
os/kernel/src/proc/: mem.rs  pm.rs  sch.rs  service.rs  thread.rs
os/kernel/src/proc/mem/: layout.rs  unit.rs
os/kernel/src/proc/sch/: flat.rs  smooth.rs
os/kernel/src/process/: scheduler.rs
os/kernel/src/process/scheduler/: flat_scheduler.rs
os/kernel/src/rng/: lcg.rs
os/kernel/src/sync/: cell.rs  hart.rs  optimistic.rs  spin.rs  up.rs
os/kernel/src/task/: ipc.rs  proc.rs  sched.rs  thread.rs
os/kernel/src/task/ipc/: message.rs  signal.rs  tunnel.rs
os/kernel/src/task/sched/: smooth.rs  unfair.rs
os/kernel/src/timer/: cpu.rs  hart.rs
os/systems/ipc/: Cargo.toml
shared/: Cargo.toml
shared/src/: call.rs  fal.rs  lib.rs  mem.rs  message.rs  page.rs  path.rs  proc.rs  process.rs  service.rs  sync.rs  time.rs
shared/src/mem/: page.rs
shared/src/sync/: semaphore.rs  spin.rs
shell/: Cargo.toml  Makefile
system/: Cargo.toml
system/src/: board.rs  lib.rs
systems/driver/: Cargo.toml
systems/fs/: Cargo.toml
systems/net/: Cargo.toml
user/: Cargo.toml  linker.ld  riscv64-unknown-erhino-elf.json  riscv64gc-unknown-kzios-elf.json
user/.cargo/: config.toml
user/drivers/sifive_uart/: Cargo.toml
user/drivers/sifive_uart/src/: main.rs  uart.rs
user/drivers/spi_sifive/: Cargo.toml
user/drivers/spi_sifive/src/: main.rs
user/frameworks/libdrv/: Cargo.toml
user/frameworks/libfal/: Cargo.toml
user/frameworks/libsrv/: Cargo.toml
user/init0/: Cargo.toml
user/init0/src/: main.rs
user/kinlib/: Cargo.toml  linker.ld
user/kinlib/src/: io.rs  lang_items.rs  lib.rs  process.rs  rt.asm  rt.rs  syscall.rs  types.rs
user/rinlib/: Cargo.toml  linker.ld  riscv64-unknown-erhino-elf.json
user/rinlib/src/: call.rs  dbg.rs  env.rs  fs.rs  io.rs  ipc.rs  lib.rs  preclude.rs  prelude.rs  proc.rs  rt.rs  service.rs  signal.rs  thread.rs
user/rinlib/src/fs/: components.rs
user/rinlib/src/ipc/: message.rs  signal.rs  tunnel.rs
user/systems/dr/: Cargo.toml
user/systems/dr/src/: main.rs
user/systems/fs/: Cargo.toml
user/systems/fs/src/: fs.rs  impls.rs  lib.rs  main.rs  tree.rs
user/systems/fs/src/impls/: memory.rs
user/systems/init/: Cargo.toml
user/systems/init/src/: main.rs
user/systems/pm/: Cargo.toml
user/systems/pm/src/: main.rs
user/systems/ts/: Cargo.toml
user/systems/ts/src/: main.rs
