[package]
name = "kzios-kernel"
authors = ["Chien Zhang <zqy0224@live.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.7.0"
spin = "0.9.2"
buddy_system_allocator = "0.8.0"
device_tree = {git = "https://github.com/rcore-os/device_tree-rs"}
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}