[package]
name = "erhino_kernel"
version = "0.1.0"
authors = [ "Chien Zhang (zqy0224@live.com)"]
description = "kernel.bin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.9"
erhino_shared = { path = "../../shared" }
buddy_system_allocator = { version = "0.8", default-features = false, features = ["const_fn", "use_spin"] }