[package]
name = "erhino_kernel"
version = "0.1.0"
authors = ["Chien Zhang (zqy0224@live.com)"]
description = "kernel.bin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10"
erhino_shared = { path = "../../shared" }
buddy_system_allocator = { version = "0.9", default-features = false, features = [
    "const_fn",
    "use_spin",
] }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
# will colored supports no_std? https://github.com/colored-rs/colored/issues/140
# colored = "2.0"
dtb_parser = { path = "../../submodules/dtb_parser" }
spin = "0.9"
hashbrown = "0.14"
flagset = "0.4"
elf_rs = "0.3"
tar-no-std = "0.2"
strum = {version = "0.25", default-features = false}
strum_macros = "0.25"
semver = {version = "1.0", default-features = false}