cargo-features = ["edition2024"]
[package]
name = "erhino_kernel"
version = "0.1.0"
authors = ["Chien Zhang (zqy0224@live.com)"]
description = "kernel.bin"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11"
erhino_shared = { path = "../../shared" }
buddy_system_allocator = { version = "0.9", default-features = false, features = [
    "const_fn",
    "use_spin",
] }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
# will colored supports no_std? https://github.com/colored-rs/colored/issues/140
# colored = "2.0"
dtb_parser = { path = "../../submodules/dtb_parser", default-features = false }
hashbrown = "0.14"
flagset = "0.4"
elf_rs = "0.3"
strum = { version = "0.26", default-features = false }
strum_macros = "0.26"
semver = { version = "1.0", default-features = false }
tar-no-std = "0.3"
lock_api = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0"
goblin = { version = "0.8", default-features = false, features = ["elf64"] }
