[package]
name = "rinlib"
version = "0.1.0"
authors = [ "Chien Zhang (zqy0224@live.com)"]
description = "Standard lib for eRhino"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erhino_shared = { path = "../../shared"}
buddy_system_allocator = { version = "0.8", features = ["const_fn"]}