[package]
name = "boards_mq_r"
authors = [ "Chien Zhang (zqy0224@live.com)" ]
version = "0.1.0"
description = "Mango MQ-R D1s board support"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erhino_kernel = { path = "../../kernel"}