[package]
name = "board_qemu"
version = "0.1.0"
authors = [ "Chien Zhang (zqy0224@live.com)"]
description = "QEMU board support"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erhino_kernel = {path = "../../kernel"}
riscv = "0.9"
dtb_parser = "0.1"
tar-no-std = "0.1"