[package]
name = "driver_sifive_uart"
authors = [ "Chien Zhang (zqy0224@live.com)" ]
version = "0.1.0"
description = "Driver of SiFive compatible uart"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rinlib = { path = "../../rinlib" }
system_dr ={ path = "../../systems/dr" }