[package]
name = "drv_spi_sifive"
version = "0.1.0"
authors = ["Chien Zhang (zqy0224@live.com)"]
description = "Sifive SPI Driver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rinlib = { path = "../../rinlib" }
libdrv = { path = "../../frameworks/libdrv" }
