[package]
name = "libsrv"
version = "0.1.0"
authors = [ "Chien Zhang (zqy0224@live.com)"]
description = "Service framework"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0"