[package]
name = "system_dr"
authors = [ "Chien Zhang (zqy0224@live.com)" ]
version = "0.1.0"
description = "Preinstalled driver registery, interfaces, manager and system"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rinlib = { path = "../../rinlib" }
